2004-10-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	* conf/planet.xml:
	* doc/random/authentication:
	* flumotion/common/keycards.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_credentials.py:
	* flumotion/test/test_keycards.py:
	* flumotion/twisted/credentials.py:
	  add tests and add some keycards

2004-10-16  Johan Dahlin  <johan@gnome.org>

	* data/image/wizard/Makefile.am (image_DATA): Add a few more icons
	for the wizard

	* flumotion/manager/component.py (ComponentHeaven.shutdown):
	Remove the avatar
	(ComponentHeaven.createAvatar, ComponentHeaven.removeAvatar): Add
	logging.
	(ComponentHeaven.removeAvatar): Remove feeders too
	(FeederSet.removeFeeders): New method.

	* flumotion/manager/main.py (_loadConfig): Don't parse the
	configuration twice.

2004-10-15  Johan Dahlin  <johan@gnome.org>

	* configure.ac:
	* data/glade/wizard.glade:
	* data/image/wizard/audiosrc.png:
	* data/image/wizard/consumption.png:
	* data/image/wizard/firewire.png:
	* data/image/wizard/licenses.png:
	* data/image/wizard/overlay.png:
	* data/image/wizard/source.png:
	* data/image/wizard/testsource.png:
	* data/image/wizard/webcam.png:
	* data/image/wizard/wizard.png:
	* data/image/wizard/xiphfish.png:
	* flumotion/component/encoders/smoke.py:
	* flumotion/component/encoders/speex.py:
	* flumotion/wizard/wizard.py:
	* flumotion/wizard/wizard_step.py:

	Wizard work, commit some icons.
	
2004-10-15  Johan Dahlin  <johan@gnome.org>

	* flumotion/test/: Add a few new unittests.

2004-10-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_checkers.py:
	* flumotion/twisted/checkers.py:
	  cred checkers tests and fixes

2004-10-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/Makefile.am:
	* flumotion/test/test_checkers.py:
	* flumotion/twisted/checkers.py:
	  add a CryptChecker and a test.  TEST NUMBER 100, WOOHOO !

2004-10-15  Thomas Vander Stichele  <thomas at apestaart dot org>
