@@ -1,6 +1,10 @@
 component_PYTHON = __init__.py overlay.py
 componentdir = $(libdir)/flumotion/python/flumotion/component/overlay
-component_DATA = overlay.xml
+component_DATA = \
+	overlay.xml \
+	cc_24x24.png \
+	fluendo_24x24.png \
+	xiph_24x24.png
 
 clean-local:
 	rm -rf *.pyc *.pyo
